<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bible</string>
    <string name="search_hint">Passage or Keyword</string>
    <string name="version_hint">Version or Description</string>
    <string name="search_description">Search Bible passage, or keyword</string>
    <string name="search_no_results">No Results for \"%1$s\" from \"%2$s\" to \"%3$s\" in \"%4$s\".</string>
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\" from \"%3$s\" to \"%4$s\" in \"%5$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\" from \"%3$s\" to \"%4$s\" in \"%5$s\": </item>
    </plurals>
    <string name="noversion">This version is only for demo, please navigate to "Manage Versions" to install Bible Data. Note: Bible Reader only supports Bible Data on external storage (i.e., sdcard).</string>
    <string name="manageversion">Manage Versions</string>
    <string name="choose_version">Choose Version</string>
    <string name="searchall">Search Entire Bible</string>
    <string name="searchold">Search Old Testament</string>
    <string name="searchnew">Search New Testament</string>
    <string name="searchgospel">Search Four Gospels</string>
    <string name="searchfrom">Choose From Book</string>
    <string name="searchto">Choose To Book</string>
    <string name="queryerror">Cannot open database, please try again later.</string>
    <string name="share">Share Bible verses to..</string>
    <string name="fromto">from %1$s to %2$s</string>
    <string name="otherbook">Choose Other Book</string>
    <string name="search">Search %1$s in Bible</string>
    <string name="demo">DEMO</string>
    <string name="chapters">%1$s, %2$s chapters.</string>
    <string name="searchinbible">Search in Bible</string>
    <string name="deleteversion">Delete Version %s?</string>
    <string name="deleteversiondetail">You won\'t be able to read or search the %s!</string>
    <string name="red">Red Letter</string>
    <string name="wojinred">For Words of Jesus if available</string>
    <string name="fontsize">Font Size</string>
    <string name="fontsummary">For version %1$s</string>
    <string name="nightmode">Night Mode</string>
    <string name="settings">Settings</string>
    <string name="justify">Text Justified</string>
    <string name="bibledata">Checking Bible Data...</string>
    <string name="log">Debug Log</string>
    <string name="version">Version</string>
    <string name="help">Feedback</string>
    <string name="pinch">Pinch to Zoom</string>
    <string name="pinch_not_work">May not work properly</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="cancel_install">Cancel</string>
    <string name="not_found">Other Versions</string>
    <string name="request">Request</string>
    <string name="request_other_version">Email a Request</string>
    <string name="request_version_message">Please find your version from bibles.org/versions or biblegateway.com/versions, then email me the link.</string>
    <string name="sync">Sync</string>
    <string name="bookmark">Add Bookmark</string>
    <string name="annotation">Annotation</string>
    <string name="annotation_local">Bookmarks and notes are currently only stored on your device. Thus they will be lost if you uninstall this app, or clear its data.</string>
    <string name="deletehighlight">Unhighlight %s?</string>
    <string name="intro">Intro</string>
    <string name="versionsyncing">Bible Data is updating, please wait...</string>
    <string name="versionsynced">Bible Data is updated: %1$s ms</string>
    <string name="save">Save</string>
    <string name="addnote_hint">Note Content</string>
    <string name="note">Note</string>
    <string name="flink">Footnotes</string>
    <string name="xlink">Cross References</string>
    <string name="editnote">Edit</string>
    <string name="deletenote">Delete</string>
    <string name="checkversion">Auto-refresh version list?</string>
    <string name="checkversion_detail">It\'s recommended to choose <b>%1$s</b>, which will cost you little data usage every time. You can change it on Settings page.</string>
    <string name="update">Update</string>
    <string name="about_source">Source code: %s</string>
    <string name="about_libraries">Use libraries: %s</string>
    <string name="new_version">Added new version: %s</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="verse">Verse</string>
    <string name="books">Books</string>
    <string name="show_verses">Verses</string>
    <string name="menu_reading">Reading</string>
    <string name="menu_search">Search</string>
    <string name="menu_highlight">Highlight</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_download">Download</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
</resources>
